[tool.poetry]
name = "pounce"
version = "0.1.0"
description = ""
authors = ["matthieugouel <matthieu.gouel@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
