[project]
name = "prowl"
version = "0.3.0"
description = "Generate caracal/caracat/saimiris probes and build awesome probing tools."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pygfc>=1.1.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.15.2",
]

[dependency-groups]
test = [
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]
dev = [
    {include-group = "test"},
    "bump-my-version>=1.2.7",
    "pydantic>=2.12",
]
